crates/uv/tests/snapshots/ecosystem__home-assistant-core-uv-lock-output.snap
---
source: crates/uv/tests/ecosystem.rs
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
warning: `VIRTUAL_ENV=[WORKSPACE]/.venv` does not match the project environment path `.venv` and will be ignored
Resolved 97 packages in [TIME]
